# c-auth-api

./: .gitignore  CMakeLists.txt  Makefile  README.md  auth-api.c  auth-api.h  credid-api.c  credid-api.h  credid.c  credid.h  test-so.c  test.c
